--- a/src/components/NavBar/styles.scss
+++ b/src/components/NavBar/styles.scss
@@ -2,15 +2,17 @@
 
 .nav-bar {
     background-color: $primary;
-    padding-left: $padding-inner;
-    padding-right: $padding-inner;
+    padding-left: $padding-default;
+    padding-right: $padding-default;
     border-radius: $default-border-radius;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
+
 
     @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
         background-color: transparent;
-        padding: $padding-inner;
+        align-self: center;
+        padding: $padding-default;
         justify-content: space-evenly;
     }
 }
