--- a/src/components/NavIcon/styles.scss
+++ b/src/components/NavIcon/styles.scss
@@ -9,6 +9,10 @@
     justify-content: center;
     align-items: center;
 
+    @media (min-width:768px) {
+        margin-right: $padding-nav;
+    }
+
     svg {
         width: 30px;
         height: 30px;
