--- a/src/components/Steps/styles.scss
+++ b/src/components/Steps/styles.scss
@@ -1,3 +1,44 @@
 @import "../../theme/index.scss";
 
-.steps {}
+.steps {
+    display: flex;
+
+    .step-item {
+        border: 0;
+        display: flex;
+        min-height: 50px;
+
+        .step-item-child-wrapper {
+            margin-bottom: $padding-default*2;
+        }
+
+        .step-item-icon {
+            width: 20px;
+            height: 20px;
+            border-radius: 20px;
+            background-color: $primary;
+        }
+
+        .step-item-line {
+            border-width: 1px;
+            border-style: double;
+            border-color: $primary;
+            margin-left: -10px;
+            margin-right: $padding-default;
+
+
+        }
+    }
+
+
+}
+
+.horizontal {
+    flex-direction: row;
+
+}
+
+.vertical {
+    flex-direction: column;
+
+}
