--- a/src/components/Steps/styles.scss
+++ b/src/components/Steps/styles.scss
@@ -10,9 +10,13 @@
         display: flex;
         min-height: 50px;
 
+        .step-left {
+            display: flex;
+            flex-direction: column;
+        }
+
         .step-item-child-wrapper {
             margin-bottom: $padding-default*2;
-            justify-content: flex-start;
         }
 
         .step-item-icon {
