--- a/src/pages/about/styles.scss
+++ b/src/pages/about/styles.scss
@@ -14,4 +14,9 @@
         }
 
     }
+
+    .badge {
+        margin-right: $padding-default*0.5;
+        margin-bottom: $padding-default*0.5;
+    }
 }
