--- a/src/theme/index.scss
+++ b/src/theme/index.scss
@@ -15,6 +15,10 @@ $default-border-radius: 8px;
     background-color: $primary;
 }
 
+.btn-outline-primary {
+    border-color: $primary;
+    color: $primary;
+}
 
 .bg-primary {
     background-color: $primary  !important;
