--- a/src/components/ContactList/styles.scss
+++ b/src/components/ContactList/styles.scss
@@ -15,4 +15,15 @@
     @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
         display: none !important;
     }
+
+}
+
+.show {
+    @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+        display: flex !important;
+    }
+
+    @media only screen and (min-device-width : 480px) {
+        display: none !important;
+    }
 }
