--- a/src/pages/recommendations/styles.scss
+++ b/src/pages/recommendations/styles.scss
@@ -3,4 +3,43 @@
 .page {
     color: $secondary;
 
+    .info-left {
+        svg {
+            width: 80px;
+            height: 80px;
+
+            path {
+                fill: $secondary
+            }
+        }
+
+    }
+
+    .item {
+        padding-bottom: $padding-item;
+
+
+
+        .item-tag-caption {
+            color: $secondary;
+        }
+
+        .item-tags {
+            .btn {
+                margin-right: $padding-default;
+            }
+
+            padding-top: $padding-default;
+            padding-bottom: $padding-default;
+        }
+
+        h4,
+        p {
+            color: $primary  !important;
+        }
+
+        img {
+            width: 90px;
+        }
+    }
 }
