--- a/src/theme/theme2.scss
+++ b/src/theme/theme2.scss
@@ -1,6 +1,5 @@
-$primary: #FF9B3F;
-$secondary: #795620;
-$primary-light: rgba(111, 207, 151, 0.1);
+$primary: #D06550;
+$secondary: #DEB48E;
 
-$primary-text: $primary;
-$secondary-text: $secondary;
+$primary-text: #25395C;
+$secondary-text: #6b758f;
