--- a/src/pages/about/styles.scss
+++ b/src/pages/about/styles.scss
@@ -1,7 +1,7 @@
 @import "../../theme/index.scss";
 
 .about {
-    color: $secondary;
+    color: $primary-text;
 
     .info-left {
         svg {
@@ -9,7 +9,7 @@
             height: 80px;
 
             path {
-                fill: $secondary
+                fill: $primary-text
             }
         }
 
