--- a/src/theme/index.scss
+++ b/src/theme/index.scss
@@ -25,3 +25,8 @@ $default-border-radius: 8px;
 .bg-primary {
     background-color: $primary  !important;
 }
+
+.icon{
+    color: $icon-color !important;
+    
+}
