--- a/src/theme/theme2.scss
+++ b/src/theme/theme2.scss
@@ -1,5 +1,6 @@
-$primary: #D06550;
-$secondary: #DEB48E;
+$primary: #607d8b;
+$secondary: #bdbdbd;
+$icon-color:#607d8b;
 
-$primary-text: #25395C;
-$secondary-text: #6b758f;
+$primary-text: #607d8b;
+$secondary-text: #607d8b;
